feat: immersive title bar

--- a/gallery/assets/assets.qrc
+++ b/gallery/assets/assets.qrc
@@ -4,5 +4,6 @@
         <file alias="menu">icons/menu.svg</file>
         <file alias="info">icons/info.svg</file>
         <file alias="settings">icons/settings.svg</file>
+        <file alias="account">icons/account.svg</file>
     </qresource>
 </RCC>
