--- a/gallery/main.ui
+++ b/gallery/main.ui
@@ -123,6 +123,12 @@
       <property name="currentIndex">
        <number>0</number>
       </property>
+      <property name="iconSize">
+       <size>
+        <width>30</width>
+        <height>30</height>
+       </size>
+      </property>
       <property name="usesScrollButtons">
        <bool>true</bool>
       </property>
@@ -140,6 +146,13 @@
         <string>SideTab</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>←Auto expand on hover</string>
+          </property>
+         </widget>
+        </item>
         <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
