--- a/src/QoreWidgets/resources/rc.qrc
+++ b/src/QoreWidgets/resources/rc.qrc
@@ -5,5 +5,6 @@
         <file alias="minimize">icons/minimize.svg</file>
         <file alias="maximize">icons/maximize.svg</file>
         <file alias="restore">icons/restore.svg</file>
+        <file alias="loading">icons/loading.svg</file>
     </qresource>
 </RCC>
